--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
   <title>Sniffer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+       a { cursor: pointer; }
+       .pagination {
+          justify-content: center;
+          flex-wrap:wrap;
+       }
+    </style>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
